--- a/style.css
+++ b/style.css
@@ -104,3 +104,16 @@ footer {
     width: 100%;
     justify-content: space-around;
 }
+.productdi }
+display:flex
+padding:100%
+
+{
+
+
+
+
+
+
+
+    
