--- a/style.css
+++ b/style.css
@@ -99,10 +99,10 @@ footer {
     padding: 10px;
     font-size: 20px;
 }
-.head_img {
-       display: flex;
-    width: 100%;
-    justify-content: space-around;
+img.head_img {
+  
+    width: 50%;
+
 }
 .product }
 display:flex
@@ -116,6 +116,10 @@ text-align: center;
     padding-bottom: 0.3em;
     font-size:1.5em;
     border-bottom: 1px solid dark;
+}
+main{
+    text-align:center;
+    
 }
 
 
